--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.9)
-project(Lab3_ipk)
+project(crc_example)
 
 set(CMAKE_CXX_STANDARD 11)
+set(HEADER_FILES "include/Array.h")
 
-add_executable(Lab3_ipk main.cpp Array.cpp Array.h)
+include_directories("include")
+
+file(GLOB SOURCES "src/*.cpp")
+file(GLOB HEADERS "include/*.h")
+
+add_executable(crc_example "src/main.cpp" "src/Array.cpp" "include/Array.h")
