[#-] Fixed CMakeLists.txt, fixed main.cpp, array.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,7 @@ cmake_minimum_required(VERSION 3.9)
 project(crc_example)
 
 set(CMAKE_CXX_STANDARD 11)
-set(HEADER_FILES "include/Array.h")
+set(HEADER "include/Array.h")
+set(SOURCE "src/main.cpp" "src/Array.cpp")
 
-include_directories("include")
-
-file(GLOB SOURCES "src/*.cpp")
-file(GLOB HEADERS "include/*.h")
-
-add_executable(crc_example "src/main.cpp" "src/Array.cpp" "include/Array.h")
+add_executable(crc_example ${SOURCE} ${HEADER})
